2005-08-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (idle_state):
	  When stopped, remove the time / total message from the statusbar.

2005-08-03  Madhan Raj M  <madhanrm@gnome.org>

	* src/sj-play.c:
	Disable Reread while playing.

2005-08-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	* src/bacon-volume.c: (bacon_volume_button_get_type),
	(bacon_volume_button_class_init), (bacon_volume_button_init),
	(bacon_volume_button_dispose), (bacon_volume_button_new),
	(bacon_volume_button_get_value), (bacon_volume_button_set_value),
	(bacon_volume_button_scroll), (bacon_volume_button_press),
	(cb_button_timeout), (cb_button_press), (cb_button_release),
	(bacon_volume_release_grab), (cb_dock_press),
	(bacon_volume_scale_get_type), (bacon_volume_scale_class_init),
	(bacon_volume_scale_new), (bacon_volume_scale_press),
	(bacon_volume_scale_release), (bacon_volume_scale_value_changed):
	* src/bacon-volume.h:
	* src/sj-main.c: (sj_make_volume_button):
	* src/sj-play.c: (on_volume_changed):
	* src/sj-volume.c:
	* src/sj-volume.h:
	  SjVolumeButton -> BaconVolumeButton and merge with latest Totem
	  fixes.

2005-08-03  Ross Burton  <ross@burtonini.com>

	* src/sj-play:
	Enable the next/prev buttons in a better place.

2005-08-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	Disable Next and Prev when SJ is not playing (based on a patch by
	Raj M Madhan).

2005-08-01  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-play.c:
	Add Previous/Next track menu items.

2005-08-01  Madhan Raj M  <madhanrm@gnome.org>

	* data/sound-juicer.glade:
	* src/sj-play.c:
	Adding on_tracklist_row_selected() to play the
	selected track. Fixes #309268.

2005-07-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Remove the title from the check box column.

2005-07-28  Shaun McCance  <shaunm@gnome.org>

	* help/sound-juicer/C/sound-juicer.xml: