@@ -1,5 +1,11 @@
 2005-08-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* src/bacon-volume.c: (bacon_volume_button_press):
+	  Fix small flickering when popping up window, or at least fix it
+	  so that you don't actually notice (#312165).
+
+2005-08-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* src/sj-play.c: (idle_state):
 	  When stopped, remove the time / total message from the statusbar.
 
